@@ -4,7 +4,6 @@ SMODS.Joker {
     config = {
         extra = {
             cards_scored = {Hearts = {}, Spades = {}, Diamonds = {}, Clubs = {}, Suitless = {}},
-            mult = 0,
             a_mult = 1
         }
     },
@@ -14,6 +13,19 @@ SMODS.Joker {
     cost = 7,
     blueprint_compat = true,
     perishable_compat = true,
+    kino_joker = {
+        id = 15121,
+        budget = 0,
+        box_office = 0,
+        release_date = "1900-01-01",
+        runtime = 90,
+        country_of_origin = "US",
+        original_language = "en",
+        critic_score = 100,
+        audience_score = 100,
+        directors = {},
+        cast = {},
+    },
     pools, k_genre = {"Musical", "Romance", "Historical"},
 
     loc_vars = function(self, info_queue, card)
